Fixing font stack in pure grid, and shifting h1-6 font sizes

--- a/app/styles/_base/_b-elements.scss
+++ b/app/styles/_base/_b-elements.scss
@@ -1,6 +1,9 @@
-body {
-	font-family:$sans-stack;
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    /* Set your content font stack here: */
+    font-family: $sans-stack;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
 	font-family:$serif-stack;
@@ -11,14 +14,18 @@ h1 {
 }
 
 h2 {
-	font-size:1.875rem; //30px
+	font-size:2.125rem; //34px
 }
 
 h3 {
-	font-size:1.75rem; 	//28px
+	font-size:1.875rem; //30px
 }
 
 h4 {
+	font-size:1.75rem; 	//28px
+}
+
+h5 {
 	font-size:1.5rem; 	//24px
 }
 
